--- a/notebooks/artnet_test.ipynb
+++ b/notebooks/artnet_test.ipynb
@@ -275,7 +275,9 @@
   {
    "cell_type": "markdown",
    "id": "4ff6255e-aa06-4b14-a9db-2a419c239aab",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### Objects"
    ]
@@ -441,12 +443,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "ce778440-8d7a-4a2c-a841-ef2f19743e4c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "EVENTS_SET = {'group_0','light_0','group_1','light_1','light_2','light_3','light_4','light_5',}"
+    "EVENTS_SET = {'group_0','group_1','light_0','light_1','light_2','light_3','light_4','light_5',}"
    ]
   },
   {
@@ -829,9 +831,7 @@
   {
    "cell_type": "markdown",
    "id": "621a3248-e99f-4c63-bf1a-548454c674b5",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Loop"
    ]
