add bitfocus companion config generator

--- a/notebooks/DeltaController.ipynb
+++ b/notebooks/DeltaController.ipynb
@@ -18,12 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "id": "c6908462-5554-4cd6-8f26-5c1325fad9fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "from stupidArtnet import StupidArtnet\n",
+    "import copy\n",
     "import random\n",
     "import string\n",
     "import sys\n",
@@ -44,16 +45,14 @@
   {
    "cell_type": "markdown",
    "id": "dad90eb6-65b0-4720-bcc4-094c136db96b",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Constants"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 99,
    "id": "258c8027-287e-40e9-ba93-d5ea1a4a03db",
    "metadata": {},
    "outputs": [],
@@ -67,6 +66,7 @@
     "DEFAULT_CHANNEL_START_ID = 1\n",
     "DEFAULT_CHANNEL_WIDTH = 11\n",
     "PRESETS_PATH = '../presets/preset.json'\n",
+    "BITFOCUS_CONFIG_PATH = '../presets/bitfocus_config.json'\n",
     "# Control Constants\n",
     "DIMMER_ID = 1\n",
     "DIMMER_FINE_ID = 2\n",
@@ -82,6 +82,10 @@
     "DEFAULT_LIGHT_VALUE = [255]+[0]*(DEFAULT_CHANNEL_WIDTH-1)\n",
     "RESET_VALUE = [0]*DEFAULT_CHANNEL_WIDTH\n",
     "LIGHT_OFF_VALUE = RESET_VALUE\n",
+    "# Config\n",
+    "MAX_BUTTON_ID = 32\n",
+    "DEFAULT_FADE_TIME = 50\n",
+    "DEFAULT_ID_LENGTH = 21\n",
     "# Mappings\n",
     "FIXTURE_TO_ID_DICT = {'dimmer':DIMMER_ID,'red':RED_ID,'green':GREEN_ID,\n",
     "                    'blue':BLUE_ID,'white':WHITE_ID,'amber':AMBER_ID,\n",
@@ -125,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "8f76a06e-7720-4423-903e-882851b75035",
    "metadata": {},
    "outputs": [],
@@ -197,16 +201,14 @@
   {
    "cell_type": "markdown",
    "id": "098e9b5e-0114-4568-8220-c1388ee73a9d",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "##### Light Source"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "e65ecbca-c04a-479e-9f75-0b46dec00505",
    "metadata": {},
    "outputs": [],
@@ -244,16 +246,14 @@
   {
    "cell_type": "markdown",
    "id": "65f4adb4-6518-402c-b42e-7f111eb9de53",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "###### Light"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "de44570f-3f0b-4daa-a1ce-e043f48b5fe7",
    "metadata": {},
    "outputs": [],
@@ -348,16 +348,14 @@
   {
    "cell_type": "markdown",
    "id": "985a87e0-5b01-46cc-a3d2-8f0c76a4fddd",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "###### Group"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "26326d2c-e605-4fa6-9f8d-e211a9a72c79",
    "metadata": {},
    "outputs": [],
@@ -484,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "35de2b62-5756-4069-87d4-84ecb182297e",
    "metadata": {},
    "outputs": [],
@@ -502,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "f4dc00a4-9436-4128-90af-caf404ed5332",
    "metadata": {},
    "outputs": [],
@@ -514,27 +512,33 @@
   {
    "cell_type": "markdown",
    "id": "f49cdc71-2bd9-46a4-8b54-ce328685a184",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 111,
    "id": "5d8981a9-c317-4d1b-a775-b8928d89e50d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_config_structure(ip_adress:str,number_of_pages=10) -> dict:\n",
-    "    \"\"\" \"\"\"\n",
-    "    config = {'version':3,'type':'full','pages':dict([(str(i),{\"name\":\"PAGE\"}) for i in range(number_of_pages)]),\n",
-    "              'controls':dict(),\n",
-    "              'instances':{\"TKdJlb-N6u8sGy0ufAlx1\":{\"instance_type\":\"generic-artnet\",\n",
+    "def create_config_structure(ip_address:str,preset:dict,number_of_pages:int=10,\n",
+    "                            instance_id:str=\"TKdJlb-N6u8sGy0ufAlx1\") -> dict:\n",
+    "    \"\"\" \n",
+    "    Create global BitFocus Companion config skeleton. \n",
+    "    \n",
+    "    :param ip_address: IP address of the artnet module.\n",
+    "    :param number_of_pages: Number of button pages to generate.\n",
+    "\n",
+    "    :return: Config in dictionnary format.\n",
+    "    \"\"\"\n",
+    "    config = {'version':3,'type':'full','pages':dict([(str(i+1),{\"name\":\"PAGE\"}) for i in range(number_of_pages)]),\n",
+    "              'controls':create_controls_config(preset,instance_id),\n",
+    "              'instances':{instance_id:{\"instance_type\":\"generic-artnet\",\n",
     "                        \"sortOrder\":1,\"label\":\"artnet\",\"isFirstInit\":False,\n",
-    "                        \"config\":{\"host\":\"169.254.79.148\",\"universe\":1,\n",
+    "                        \"config\":{\"host\":ip_address,\"universe\":1,\n",
     "                        \"timer_slow\":1000,\"timer_fast\":40},\"enabled\":True,\n",
     "                        \"lastUpgradeIndex\":0}}}\n",
     "    return config"
@@ -542,78 +546,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 112,
    "id": "3f068a16-272c-4449-bec3-07be5a8d981c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_config_id(id_length:int) -> str:\n",
-    "    \"\"\" \"\"\"\n",
+    "    \"\"\" Generate ascii random id of given length. \"\"\"\n",
     "    return ''.join(random.choices(string.ascii_uppercase + string.ascii_lowercase, k=id_length))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 113,
    "id": "9b8f4f25-fc0a-47a1-9e14-a0600437c6ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_channel_config(light_object:LightSource,fixture_id:int,instance_id:str,id_length:int) -> dict:\n",
-    "    \"\"\" \"\"\"\n",
+    "def create_channel_config(channel_id:int,channel_value:int,\n",
+    "                            instance_id:str,id_length:int,\n",
+    "                            fade_time:int) -> dict:\n",
+    "    \"\"\" Create config step for a single channel. \"\"\"\n",
     "    channel_dict = {\"id\":generate_config_id(id_length),\"action\":\"set\",\n",
     "                    \"instance\":instance_id,\n",
-    "                    \"options\":{\"channel\":light_object.channel.offset+fixture_id,\"value\":light_object.state[fixture_id-1],\n",
+    "                    \"options\":{\"channel\":channel_id,\"value\":channel_value,\n",
     "                    \"duration\":fade_time},\"delay\":0}\n",
     "    return channel_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 114,
    "id": "bb634064-eb56-47ac-b769-13e238635f72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_config_button(light_source_dict:dict,preset_name:str,\n",
-    "                         instance_id:str,id_length:int,\n",
-    "                         fade_time=50) -> dict:\n",
+    "def create_button_config(preset_config:dict,instance_id:str,preset_name:str,\n",
+    "                        id_length:int,fade_time:int) -> dict:\n",
     "    \"\"\" \"\"\"\n",
-    "    light_dict = dict([(light_name, light_object) for light_name,light_object in \n",
-    "                        light_source_dict.items() if 'group' not in light_name])\n",
+    "    light_values = [v for values in list(preset_config.values())[2:] for v in values]\n",
+    "    light_data = [(idx,light_values[idx]) for idx in range(len(light_values))]\n",
     "    button_config = {\"type\":\"button\",\n",
-    "                     \"style\":{\"text\":\"R-1\",\"size\":\"auto\",\"png\":null,\n",
+    "                     \"style\":{\"text\":preset_name,\"size\":\"auto\",\"png\":None,\n",
     "                              \"alignment\":\"center:top\",\"pngalignment\":\"center:center\",\n",
-    "                              \"color\":16777215,\"bgcolor\":0,\"show_topbar\":true},\n",
-    "                     \"options\":{\"relativeDelay\":false,\"stepAutoProgress\":true},\n",
+    "                              \"color\":16777215,\"bgcolor\":0,\"show_topbar\":True},\n",
+    "                     \"options\":{\"relativeDelay\":False,\"stepAutoProgress\":True},\n",
     "                     \"feedbacks\":[],\n",
     "                     \"steps\":{\"0\":{\"action_sets\":{\"down\":[\n",
-    "                         create_channel_config(light_object,i+1,instance_id,id_length) for\n",
-    "                         i in range(len(light_object.state)) for light_object\n",
-    "                         in light_dict.values()],\n",
+    "                         create_channel_config(idx,value,instance_id,id_length,fade_time) for\n",
+    "                         idx,value in light_data],\n",
     "                     \"up\":[]},\"options\":{\"runWhileHeld\":[]}}}}\n",
+    "    return button_config\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "a72f868b-13a7-496c-9506-e312fdda7dad",
+   "execution_count": 115,
+   "id": "fcf47c23",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "21"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(\"9jXtKUqoVHsMl7_NHKdzr\")"
+    "def create_controls_config(preset:dict,instance_id:str,id_length:int=DEFAULT_ID_LENGTH,\n",
+    "                            fade_time:int=DEFAULT_FADE_TIME) -> dict:\n",
+    "    \"\"\" \"\"\"\n",
+    "    control_dict = dict()\n",
+    "    bank_id = 1\n",
+    "    button_id = 1\n",
+    "    for preset_name, preset_config in preset.items():\n",
+    "        button_config = create_button_config(preset_config,instance_id,\n",
+    "                                                preset_name,id_length,fade_time)\n",
+    "        control_dict[f'bank:{bank_id}-{button_id}'] = copy.deepcopy(button_config)\n",
+    "        # If we reached the end of the page\n",
+    "        if button_id == MAX_BUTTON_ID:\n",
+    "            bank_id +=1\n",
+    "            button_id = 0\n",
+    "        button_id += 1\n",
+    "    return control_dict\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "5142161e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(PRESETS_PATH) as f:\n",
+    "    a = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "04179938",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = create_config_structure('169.254.79.148',a['base'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "c1f21f7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(BITFOCUS_CONFIG_PATH,'w') as f:\n",
+    "    json.dump(b,f)"
    ]
   },
   {
@@ -629,16 +670,14 @@
   {
    "cell_type": "markdown",
    "id": "8c3a4e6d-a02e-4ec0-92bf-2b793364c80a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "##### Layout"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "85b7bb35-8b23-432b-86e2-85cb1c34fb70",
    "metadata": {},
    "outputs": [],
@@ -653,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "6ff04cfa-0211-408a-a9bb-80b77f271a23",
    "metadata": {},
    "outputs": [],
@@ -674,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "47bac6f0-68f9-4142-9823-5d4c88215ed8",
    "metadata": {},
    "outputs": [],
@@ -723,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "a3a1afca-a6db-45dc-8ada-9ae17782c158",
    "metadata": {},
    "outputs": [],
@@ -739,16 +778,14 @@
   {
    "cell_type": "markdown",
    "id": "b83505da-9e22-4c56-b06d-96f828ce6e9d",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "##### Helpers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "2516e107-681e-45f4-8531-8240fc27d16a",
    "metadata": {},
    "outputs": [],
@@ -762,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "70acd71b-a3ed-4b4f-a00c-ca551d3fd985",
    "metadata": {},
    "outputs": [],
@@ -776,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "b09f0040-bc03-4c5c-bf61-ae715a0082d9",
    "metadata": {},
    "outputs": [],
@@ -789,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "14174794-82bf-4414-a45d-89dbb9f132f6",
    "metadata": {},
    "outputs": [],
@@ -810,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "20d4ee2f-d411-4fd3-a8ae-de45d2af4388",
    "metadata": {},
    "outputs": [],
@@ -838,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "a357461b-eee7-49a8-9eca-176133c1987d",
    "metadata": {},
    "outputs": [],
@@ -866,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "5cbda9bc-58c5-4479-b307-f06ba7e72b55",
    "metadata": {},
    "outputs": [],
@@ -890,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "7048ef6e-46d4-4dfc-aeb9-1e57b006c2be",
    "metadata": {},
    "outputs": [],
@@ -947,16 +984,14 @@
   {
    "cell_type": "markdown",
    "id": "6565d82a-f654-484a-b0c9-92705515873a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "247d4da6-abb2-41e4-97e8-bae7eb840a4c",
    "metadata": {},
    "outputs": [],
@@ -1014,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "id": "e1fdbfcf-6d5a-4841-8783-033f08881638",
    "metadata": {
     "scrolled": true
@@ -1110,6 +1145,57 @@
    },
    "source": [
     "### Archive"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b41cf65f",
+   "metadata": {},
+   "source": [
+    "#### Config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bf664d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_button_config(light_source_dict:dict,instance_id:str,preset_name:str,\n",
+    "                        id_length:int,fade_time:int=50) -> dict:\n",
+    "    \"\"\" \"\"\"\n",
+    "    light_dict = dict([(light_name, light_object) for light_name,light_object in \n",
+    "                        light_source_dict.items() if 'group' not in light_name])\n",
+    "    button_config = {\"type\":\"button\",\n",
+    "                     \"style\":{\"text\":preset_name,\"size\":\"auto\",\"png\":Null,\n",
+    "                              \"alignment\":\"center:top\",\"pngalignment\":\"center:center\",\n",
+    "                              \"color\":16777215,\"bgcolor\":0,\"show_topbar\":True},\n",
+    "                     \"options\":{\"relativeDelay\":False,\"stepAutoProgress\":True},\n",
+    "                     \"feedbacks\":[],\n",
+    "                     \"steps\":{\"0\":{\"action_sets\":{\"down\":[\n",
+    "                         create_channel_config(light_object,i+1,instance_id,id_length,fade_time) for\n",
+    "                         i in range(len(light_object.state)) for light_object\n",
+    "                         in light_dict.values()],\n",
+    "                     \"up\":[]},\"options\":{\"runWhileHeld\":[]}}}}\n",
+    "    return button_config\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e18a736d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_channel_config(light_object:LightSource,fixture_id:int,instance_id:str,id_length:int,fade_time:int) -> dict:\n",
+    "    \"\"\" Create config step for a single channel. \"\"\"\n",
+    "    channel_dict = {\"id\":generate_config_id(id_length),\"action\":\"set\",\n",
+    "                    \"instance\":instance_id,\n",
+    "                    \"options\":{\"channel\":light_object.channel.offset+fixture_id,\"value\":light_object.state[fixture_id-1],\n",
+    "                    \"duration\":fade_time},\"delay\":0}\n",
+    "    return channel_dict"
    ]
   },
   {
