--- a/notebooks/DeltaController.ipynb
+++ b/notebooks/DeltaController.ipynb
@@ -18,10 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "id": "c6908462-5554-4cd6-8f26-5c1325fad9fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 1.9.6\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "from stupidArtnet import StupidArtnet\n",
     "import copy\n",
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "id": "258c8027-287e-40e9-ba93-d5ea1a4a03db",
    "metadata": {},
    "outputs": [],
@@ -66,7 +75,10 @@
     "DEFAULT_CHANNEL_START_ID = 1\n",
     "DEFAULT_CHANNEL_WIDTH = 11\n",
     "PRESETS_PATH = '../presets/preset.json'\n",
-    "BITFOCUS_CONFIG_PATH = '../presets/bitfocus_config.json'\n",
+    "BITFOCUS_CONFIG_FOLDER = '../config/'\n",
+    "BITFOCUS_CONFIG_PATH = BITFOCUS_CONFIG_FOLDER+'bitfocus_config.json'\n",
+    "DEFAULT_IP = '169.254.79.148'\n",
+    "PRESET_BUTTON_PREFIX = 'preset_group_'\n",
     "# Control Constants\n",
     "DIMMER_ID = 1\n",
     "DIMMER_FINE_ID = 2\n",
@@ -84,7 +96,7 @@
     "LIGHT_OFF_VALUE = RESET_VALUE\n",
     "# Config\n",
     "MAX_BUTTON_ID = 32\n",
-    "DEFAULT_FADE_TIME = 50\n",
+    "DEFAULT_FADE_TIME = 750\n",
     "DEFAULT_ID_LENGTH = 21\n",
     "# Mappings\n",
     "FIXTURE_TO_ID_DICT = {'dimmer':DIMMER_ID,'red':RED_ID,'green':GREEN_ID,\n",
@@ -129,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8f76a06e-7720-4423-903e-882851b75035",
    "metadata": {},
    "outputs": [],
@@ -208,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e65ecbca-c04a-479e-9f75-0b46dec00505",
    "metadata": {},
    "outputs": [],
@@ -253,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "de44570f-3f0b-4daa-a1ce-e043f48b5fe7",
    "metadata": {},
    "outputs": [],
@@ -355,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "26326d2c-e605-4fa6-9f8d-e211a9a72c79",
    "metadata": {},
    "outputs": [],
@@ -482,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "35de2b62-5756-4069-87d4-84ecb182297e",
    "metadata": {},
    "outputs": [],
@@ -500,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f4dc00a4-9436-4128-90af-caf404ed5332",
    "metadata": {},
    "outputs": [],
@@ -519,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "id": "5d8981a9-c317-4d1b-a775-b8928d89e50d",
    "metadata": {},
    "outputs": [],
@@ -546,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 11,
    "id": "3f068a16-272c-4449-bec3-07be5a8d981c",
    "metadata": {},
    "outputs": [],
@@ -558,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 12,
    "id": "9b8f4f25-fc0a-47a1-9e14-a0600437c6ac",
    "metadata": {},
    "outputs": [],
@@ -576,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 13,
    "id": "bb634064-eb56-47ac-b769-13e238635f72",
    "metadata": {},
    "outputs": [],
@@ -585,7 +597,7 @@
     "                        id_length:int,fade_time:int) -> dict:\n",
     "    \"\"\" \"\"\"\n",
     "    light_values = [v for values in list(preset_config.values())[2:] for v in values]\n",
-    "    light_data = [(idx,light_values[idx]) for idx in range(len(light_values))]\n",
+    "    light_data = [(idx+1,light_values[idx]) for idx in range(len(light_values))]\n",
     "    button_config = {\"type\":\"button\",\n",
     "                     \"style\":{\"text\":preset_name,\"size\":\"auto\",\"png\":None,\n",
     "                              \"alignment\":\"center:top\",\"pngalignment\":\"center:center\",\n",
@@ -602,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 14,
    "id": "fcf47c23",
    "metadata": {},
    "outputs": [],
@@ -627,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 15,
    "id": "5142161e",
    "metadata": {},
    "outputs": [],
@@ -638,17 +650,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 16,
    "id": "04179938",
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = create_config_structure('169.254.79.148',a['base'])"
+    "b = create_config_structure(DEFAULT_IP,a['base'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 17,
    "id": "c1f21f7b",
    "metadata": {},
    "outputs": [],
@@ -677,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "85b7bb35-8b23-432b-86e2-85cb1c34fb70",
    "metadata": {},
    "outputs": [],
@@ -686,13 +698,13 @@
     "    \"\"\" Create the layout for the preset menu. \"\"\"\n",
     "    layout = []\n",
     "    for preset_group in presets.keys():\n",
-    "        layout.append([sg.Button(preset_group,button_color=\"black on SkyBlue1\",key=\"preset_group_\"+preset_group,s=(90,5))])\n",
+    "        layout.append([sg.Button(preset_group,button_color=\"black on SkyBlue1\",key=PRESET_BUTTON_PREFIX+preset_group,s=(90,5))])\n",
     "    return layout"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "6ff04cfa-0211-408a-a9bb-80b77f271a23",
    "metadata": {},
    "outputs": [],
@@ -713,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "47bac6f0-68f9-4142-9823-5d4c88215ed8",
    "metadata": {},
    "outputs": [],
@@ -762,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "a3a1afca-a6db-45dc-8ada-9ae17782c158",
    "metadata": {},
    "outputs": [],
@@ -785,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "2516e107-681e-45f4-8531-8240fc27d16a",
    "metadata": {},
    "outputs": [],
@@ -799,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "70acd71b-a3ed-4b4f-a00c-ca551d3fd985",
    "metadata": {},
    "outputs": [],
@@ -813,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "b09f0040-bc03-4c5c-bf61-ae715a0082d9",
    "metadata": {},
    "outputs": [],
@@ -826,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "14174794-82bf-4414-a45d-89dbb9f132f6",
    "metadata": {},
    "outputs": [],
@@ -847,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "20d4ee2f-d411-4fd3-a8ae-de45d2af4388",
    "metadata": {},
    "outputs": [],
@@ -875,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "a357461b-eee7-49a8-9eca-176133c1987d",
    "metadata": {},
    "outputs": [],
@@ -892,10 +904,10 @@
     "        elif event != '__TIMEOUT__':\n",
     "            text = sg.popup_get_text('Entrez nom du preset', title=\"Textbox\")\n",
     "            if text != None and text != '':\n",
-    "                if text in presets[event.split('preset_group_')[-1]].keys():\n",
+    "                if text in presets[event.split(PRESET_BUTTON_PREFIX)[-1]].keys():\n",
     "                    sg.popup_auto_close('Le nom du preset existe déjà, veuillez en entrer un nouveau.')\n",
     "                else:\n",
-    "                    presets[event.split('preset_group_')[-1]][text] = dict([(name,l.state) for name,l in light_object_dict.items()])\n",
+    "                    presets[event.split(PRESET_BUTTON_PREFIX)[-1]][text] = dict([(name,l.state) for name,l in light_object_dict.items()])\n",
     "                    save_presets(presets,presets_path)\n",
     "                    break\n",
     "    preset_window.close();"
@@ -903,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "5cbda9bc-58c5-4479-b307-f06ba7e72b55",
    "metadata": {},
    "outputs": [],
@@ -918,7 +930,7 @@
     "        if event == sg.WIN_CLOSED:\n",
     "            break \n",
     "        elif event != '__TIMEOUT__':\n",
-    "            preset_selected = preset_process(presets,event.split('preset_group_')[-1],light_object_dict)\n",
+    "            preset_selected = preset_process(presets,event.split(PRESET_BUTTON_PREFIX)[-1],light_object_dict)\n",
     "            if preset_selected:\n",
     "                update_buttons(window,light_object_dict)\n",
     "            break\n",
@@ -927,7 +939,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
+   "id": "1fd83115",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def select_config(presets:dict):\n",
+    "    \"\"\" \"\"\"\n",
+    "    layout = create_preset_layout(presets)\n",
+    "    preset_window = sg.Window('Save Preset', layout, background_color='black', resizable=False).finalize()\n",
+    "    while True:\n",
+    "        # Update GUI\n",
+    "        event, values = preset_window.read(timeout=1000)\n",
+    "        if event == sg.WIN_CLOSED:\n",
+    "            break \n",
+    "        elif event != '__TIMEOUT__':\n",
+    "            preset_name = event.split(PRESET_BUTTON_PREFIX)[-1]\n",
+    "            bitfocus_config = create_config_structure(DEFAULT_IP,a[preset_name])\n",
+    "            with open(BITFOCUS_CONFIG_FOLDER+preset_name+'.json','w') as f:\n",
+    "                json.dump(bitfocus_config,f)\n",
+    "            break\n",
+    "    preset_window.close();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "7048ef6e-46d4-4dfc-aeb9-1e57b006c2be",
    "metadata": {},
    "outputs": [],
@@ -949,11 +986,12 @@
     "        # Update GUI\n",
     "        event, values = window.read(timeout=1000)\n",
     "        if event == sg.WIN_CLOSED:\n",
+    "            select_config(presets)\n",
     "            for light_object in light_object_dict.values():\n",
     "                light_object.turn_off()\n",
-    "            break \n",
-    "        elif 'preset_group_' in event:\n",
-    "            preset_group = event.split('preset_group_')[-1]\n",
+    "            break\n",
+    "        elif PRESET_BUTTON_PREFIX in event:\n",
+    "            preset_group = event.split(PRESET_BUTTON_PREFIX)[-1]\n",
     "            preset_selected = preset_process(presets,preset_group,light_object_dict)\n",
     "            if preset_selected:\n",
     "                update_buttons(window,light_object_dict)\n",
@@ -991,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "247d4da6-abb2-41e4-97e8-bae7eb840a4c",
    "metadata": {},
    "outputs": [],
@@ -1049,14 +1087,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "e1fdbfcf-6d5a-4841-8783-033f08881638",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "live_color_picker('169.254.79.148',6)"
+    "live_color_picker(DEFAULT_IP,6)"
    ]
   },
   {
@@ -1069,17 +1107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "80c54536-e423-47fd-a827-c3cd27996338",
    "metadata": {},
    "outputs": [],
    "source": [
-    "server = StupidArtnet('169.254.79.148', 1, 512, 30, True, True)"
+    "server = StupidArtnet(DEFAULT_IP, 1, 512, 30, True, True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c6ef1a9e-fb1a-48c6-a2b9-c70e20872ca3",
    "metadata": {},
    "outputs": [],
@@ -1089,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "764ef307-1f2c-46f9-ba14-42dfd2310df0",
    "metadata": {},
    "outputs": [],
@@ -1099,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "0ddbba69-f467-4670-898d-ad31e32b79b3",
    "metadata": {},
    "outputs": [],
@@ -1109,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "8f16adf0-5346-428a-a287-19e0af3bc067",
    "metadata": {},
    "outputs": [],
@@ -1119,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "06bf7ad9-7cd7-4063-a4a7-97372c07ae18",
    "metadata": {},
    "outputs": [],
@@ -1129,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "48b24495-c9f3-4c38-9672-7ba904f5e7ff",
    "metadata": {},
    "outputs": [],
@@ -1210,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3a195f2d-2d50-4138-95dd-f9b5766cf5a5",
    "metadata": {},
    "outputs": [],
