--- a/notebooks/DeltaController.ipynb
+++ b/notebooks/DeltaController.ipynb
@@ -1082,7 +1082,7 @@
    "id": "7b2e5194-cbb5-41f5-bbb9-676075fd0d0c",
    "metadata": {},
    "source": [
-    "#### Tests"
+    "### Software"
    ]
   },
   {
@@ -1103,6 +1103,14 @@
    "metadata": {},
    "source": [
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f9d8561",
+   "metadata": {},
+   "source": [
+    "### Test\n"
    ]
   },
   {
